k8s/core/longhorn-system/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hosts:
    - 'longhorn.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: longhorn-frontend.longhorn-system.svc.cluster.local
          weight: 100
          headers:
            response:
              set:
                Referrer-Policy: no-referrer
                X-Content-Type-Options: nosniff
                X-DNS-Prefetch-Control: 'off'
                X-Download-Options: noopen
                X-Frame-Options: deny
                X-XSS-Protection: 1; mode=block
